[package]
edition = "2021"
name = "purl"
version = "0.1.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
humantime = "2.1.0"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = "1"
