[package]
authors = ["Architect Financial Technologies LLC"]
categories = ["command-line-utilities"]
description = "pURL"
edition = "2021"
keywords = ["curl", "http", "grpc"]
license = "AGPL-3.0-only"
name = "purl"
version = "0.1.0"

[profile.release]
strip = true
lto = true
opt-level = "z" # optimize for size
panic = "abort"

[dependencies]
anyhow = "1"
bytes = "1"
# chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2"
# dirs = "5"
edit = "0.1.5"
env_logger = "0.11"
# futures = "0.3"
# humantime = "2.1.0"
# inquire = "0.7.5"
# log = "0.4"
reqwest = { version = "0.12", features = ["http2", "json", "rustls-tls"] }
# serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
url = "2"
# uuid = "1"
